client/src/assets/css/notes.css
.notes-component {
    position: absolute;
    width: 100%;
}

.toolbar {
    position: fixed;
    width: 90%;
    height: 75px;
    padding: 5px 0 0 15px;
    background-color: #31C3E7;
    text-align: left;
    line-height: 45px;
    z-index: 1;
}

.editor {
    margin-top: 90px;
    text-align: left;
    padding-left: 10px;
}

.search-box {
    margin-top: -12px;
    margin-left: -5px;
    line-height: 23px;

}

.search-input {
    border-radius: 5px;
    padding-left: 5px;
}

.material-icons {
    color: white;
}

